--- a/learning html/table.html
+++ b/learning html/table.html
@@ -18,6 +18,11 @@
             <td>100</td>
             <td>karachi</td>        
         </tr>
+        <tr>
+            <td>Fahad</td>
+            <td>100</td>
+            <td>karachi</td>        
+        </tr>
     </table>
 </body>
 </html>
